# weather-station

./: .gitignore  LICENSE.md  MILESTONES.md  README.md  diagram.json
api-server/: .env.example  .gitignore  Cargo.toml  README.md  build.rs
api-server/migrations/00000000000000_diesel_initial_setup/: up.sql
api-server/migrations/2020-03-09-134857_create_employees/: down.sql  up.sql
api-server/migrations/2020-03-09-134857_create_tables/: down.sql  up.sql
api-server/migrations/2021-05-26-191237_create stations/: down.sql  up.sql
api-server/migrations/2021-05-27-195835_expand-db/: down.sql  up.sql
api-server/migrations/2021-06-02-195657_sensor_types_list/: down.sql  up.sql
api-server/migrations/2021-06-09-152624_create_tables/: down.sql  up.sql
api-server/migrations/2021-06-09-154334_seed_data/: down.sql  up.sql
api-server/src/: db.rs  error_handler.rs  lib.rs  main.rs  schema.rs  udp.rs
api-server/src/employees/: model.rs  routes.rs
api-server/src/homepage/: index.html  routes.rs
api-server/src/measurements/: model.rs  routes.rs
api-server/src/sensor_types/: model.rs  routes.rs
api-server/src/sensors/: model.rs  routes.rs
api-server/src/stations/: model.rs  routes.rs
hardware-files/: README.md
sketch/: .gitignore  README.md  config.h.example  farmerkeith_BMP280.cpp  farmerkeith_BMP280.h  index.js  measure.h  sketch.ino  sleep.h
web-app/: .eslintrc.js  .gitignore  .prettierrc  README.md  config.json.example  package-lock.json  package.json  vue.config.js
web-app/src/: main.js
web-app/src/assets/: main.css
web-app/src/components/: BookmarkButton.vue  CardContainer.vue  CardHeader.vue  CurrentStats.vue  CurrentView.vue  DashboardContainer.vue  ElevationCard.vue  Graph.vue  HumidityCard.vue  Layout.vue  ModeButton.vue  NavDrawer.vue  PreferencesDrawer.vue  PressureCard.vue  SideDrawer.vue  SignalCard.vue  SortButtons.vue  StationContainer.vue  StatusText.vue  TemperatureCard.vue  TimeButton.vue  TimeButtons.vue  VoltageCard.vue
web-app/src/components/cards/: CurrentTemperature.vue  Elevation.vue  Humidity.vue  Pressure.vue  Signal.vue  Temperature.vue  Voltage.vue
web-app/src/plugins/: deferred.js  vuetify.js
web-app/src/router/: index.js
web-app/src/store/: cache-handler.js  index.js
web-app/src/views/: About.vue  Dashboard.vue  Station.vue
